# rag_api_app

./: .gitignore  README.md  docker-compose.yml
backend/: .env-example  Dockerfile  main.py  pyproject.toml  requirements.txt  users.db
backend/src/: __init__.py
backend/src/controllers/: agent_chat.py  auth.py  upload_data.py
backend/src/models/: agent_request.py  login.py
backend/src/services/: chat_service.py  upload_service.py
backend/src/utils/: environment.py  shared.py
backend/src/utils/database/: crud.py  database.py  dependencies.py  models.py  schemas.py
