[tool.poetry]
name = "qa-agent-rag-backend"
version = "0.1.0"
description = ""
authors = ["ShathisKannan19 <vshathiskannan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
langchain = "^0.3.4"
langgraph = "^0.2.39"
langchain-groq = "^0.2.0"
langchain-community = "^0.3.3"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
langchain-chroma = ">=0.1.2"
sentence-transformers = "^3.2.1"
pypdf = "^5.0.1"
langchain-huggingface = "^0.1.0"
sqlalchemy = "^2.0.36"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
